--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "learning node and express",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "viresh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
