--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
